--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.8",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "graphql": "^16.2.0",
     "react": "17.0.2",
     "react-native": "0.67.0",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.2",
     "react-native-snap-carousel": "^3.9.1"
   },
   "devDependencies": {
